# build-your-own-x

./: .gitignore  .markdown-link-check.json  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  SECURITY.md  SETUP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken-link.yml  feature-request.yml  question.yml  tutorial-submission.yml
.github/workflows/: link-validation.yml  vnc-server-viewer.yml
scripts/: README.md  health-check.sh
vnc/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.sh  demo-server.html  demo-viewer.html  requirements.txt  setup.py
vnc-monitoring/: README.md  install.sh  vnc-monitor.service  vnc_monitor.conf  vnc_monitor.py
vnc-server/: .gitignore  README.md  USAGE.md  authentication.py  core_vnc_server.py  demo.py  examples.py  main.py  requirements.txt  rfb_protocol.py  screen_capture.py  simple_vnc_server.py  test_client.py  test_vnc_server.py  vnc_server.py  vnc_users.json  web_gui.py
vnc/android/: build-android.js
vnc/common/: __init__.py  utils.py
vnc/docs/: architecture.md  build-guide.md  build.md  protocol.md  setup.md  troubleshooting.md  usage.md
vnc/examples/: client_example.cpp  server_example.cpp  simple_test.cpp
vnc/protocol/: __init__.py  rfb.py
vnc/server/: __init__.py  build-android.js  main.js  package.json  server.html  server.js  vnc_server.py
vnc/shared/: vnc-gui.js  vnc-protocol.js  vnc-styles.css
vnc/src/client/: vnc_client.cpp  vnc_client.h
vnc/src/common/: platform_factory.cpp  rfb_protocol.cpp  rfb_protocol.h
vnc/src/gui/: vnc_client_gui.cpp  vnc_client_gui.h  vnc_server_gui.cpp  vnc_server_gui.h
vnc/src/server/: vnc_server.cpp  vnc_server.h
vnc/test-build/: simple_test
vnc/tests/: README.md  rfb_protocol_test.cpp  test_vnc.py
vnc/viewer/: __init__.py  main.js  package-lock.json  package.json  viewer.html  viewer.js  vnc_viewer.py
